--- a/.github/workflows/stories.yml
+++ b/.github/workflows/stories.yml
@@ -10,7 +10,7 @@ on:
   pull_request:
 jobs:
   test:
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
