--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -281,7 +281,7 @@ jobs:
         DISABLE_INSPECT_FUSE: on
 
     - name: tar it
-      run: tar czvf artifacts/windows/${name}-win-${version}.tar.gz release/win-unpacked
+      run: tar czvf artifacts/windows/%name%-win-%version%.tar.gz release/win-unpacked
 
     - name: Upload installer size
       if: ${{ github.repository == 'signalapp/Signal-Desktop-Private' && github.ref == 'refs/heads/main' }}
